latex2md.output
State 33 conflicts: 1 shift/reduce
State 85 conflicts: 1 shift/reduce
State 102 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: DOC multiple_call END

    2 multiple_call: latex
    3              | multiple_call latex

    4 latex: section
    5      | subsection
    6      | subsubsection
    7      | textbf
    8      | textit
    9      | hrule
   10      | par
   11      | includegraphics
   12      | href
   13      | enumerate
   14      | itemize
   15      | code_part
   16      | paragraph
   17      | tabular

   18 section: SECTION BRACT_L TEXT BRACT_R

   19 subsection: SUBSECTION BRACT_L TEXT BRACT_R

   20 subsubsection: SUBSUBSEC BRACT_L TEXT BRACT_R

   21 textbf: BOLD BRACT_L TEXT BRACT_R

   22 textit: ITALIC BRACT_L TEXT BRACT_R

   23 href: HYPERLINK BRACT_L TEXT BRACT_R BRACT_L TEXT BRACT_R

   24 par: PARAGRAPH

   25 hrule: HLINE

   26 includegraphics: IMAGE SQ_BL TEXT SQ_BR BRACT_L TEXT BRACT_R

   27 code_part: BEG_CODE sentence END_CODE

   28 enumerate: BEG_ENUM ord_item_list END_ENUM

   29 ord_item_list: ITEM TEXT
   30              | ord_item_list ITEM TEXT

   31 itemize: BEG_ITEMIZE unord_item_list END_ITEMIZE

   32 unord_item_list: ITEM TEXT
   33                | unord_item_list ITEM TEXT

   34 tabular: BEG_TAB BRACT_L columns BRACT_R actual_data END_TAB

   35 columns: TEXT
   36        | columns TEXT

   37 actual_data: HL row_area HL
   38            | row_area

   39 row_area: row ROW_END
   40         | row_area HL row ROW_END
   41         | row_area row ROW_END

   42 row: sentn
   43    | row TAB_CELL_SEP sentn

   44 sentn: text
   45      | sentn TAB_CELL_SEP text
   46      | sentn text

   47 paragraph: sentence

   48 sentence: text
   49         | sentence text

   50 text: TEXT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    SECTION <string> (258) 18
    SUBSECTION <string> (259) 19
    SUBSUBSEC <string> (260) 20
    BRACT_L <string> (261) 18 19 20 21 22 23 26 34
    BRACT_R <string> (262) 18 19 20 21 22 23 26 34
    BOLD <string> (263) 21
    ITALIC <string> (264) 22
    ITEM <string> (265) 29 30 32 33
    IMAGE <string> (266) 26
    HYPERLINK <string> (267) 23
    HLINE <string> (268) 25
    PARAGRAPH <string> (269) 24
    SQ_BL <string> (270) 26
    SQ_BR <string> (271) 26
    HL <string> (272) 37 40
    BEG_ITEMIZE (273) 31
    END_ITEMIZE (274) 31
    BEG_CODE (275) 27
    END_CODE (276) 27
    BEG_TAB (277) 34
    END_TAB (278) 34
    BEG_ENUM (279) 28
    END_ENUM (280) 28
    TAB_CELL_SEP (281) 43 45
    ROW_END (282) 39 40 41
    DOC (283) 1
    END (284) 1
    TEXT <string> (285) 18 19 20 21 22 23 26 29 30 32 33 35 36 50


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    start (32)
        on left: 1
        on right: 0
    multiple_call (33)
        on left: 2 3
        on right: 1 3
    latex (34)
        on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17
        on right: 2 3
    section <node> (35)
        on left: 18
        on right: 4
    subsection <node> (36)
        on left: 19
        on right: 5
    subsubsection <node> (37)
        on left: 20
        on right: 6
    textbf <node> (38)
        on left: 21
        on right: 7
    textit <node> (39)
        on left: 22
        on right: 8
    href <node> (40)
        on left: 23
        on right: 12
    par <node> (41)
        on left: 24
        on right: 10
    hrule <node> (42)
        on left: 25
        on right: 9
    includegraphics <node> (43)
        on left: 26
        on right: 11
    code_part <string> (44)
        on left: 27
        on right: 15
    enumerate <node> (45)
        on left: 28
        on right: 13
    ord_item_list <node> (46)
        on left: 29 30
        on right: 28 30
    itemize <node> (47)
        on left: 31
        on right: 14
    unord_item_list <node> (48)
        on left: 32 33
        on right: 31 33
    tabular <node> (49)
        on left: 34
        on right: 17
    columns (50)
        on left: 35 36
        on right: 34 36
    actual_data (51)
        on left: 37 38
        on right: 34
    row_area <string> (52)
        on left: 39 40 41
        on right: 37 38 40 41
    row <string> (53)
        on left: 42 43
        on right: 39 40 41 43
    sentn <string> (54)
        on left: 44 45 46
        on right: 42 43 45 46
    paragraph <node> (55)
        on left: 47
        on right: 16
    sentence <string> (56)
        on left: 48 49
        on right: 27 47 49
    text <string> (57)
        on left: 50
        on right: 44 45 46 48 49


State 0

    0 $accept: • start $end

    DOC  shift, and go to state 1

    start  go to state 2


State 1

    1 start: DOC • multiple_call END

    SECTION      shift, and go to state 3
    SUBSECTION   shift, and go to state 4
    SUBSUBSEC    shift, and go to state 5
    BOLD         shift, and go to state 6
    ITALIC       shift, and go to state 7
    IMAGE        shift, and go to state 8
    HYPERLINK    shift, and go to state 9
    HLINE        shift, and go to state 10
    PARAGRAPH    shift, and go to state 11
    BEG_ITEMIZE  shift, and go to state 12
    BEG_CODE     shift, and go to state 13
    BEG_TAB      shift, and go to state 14
    BEG_ENUM     shift, and go to state 15
    TEXT         shift, and go to state 16

    multiple_call    go to state 17
    latex            go to state 18
    section          go to state 19
    subsection       go to state 20
    subsubsection    go to state 21
    textbf           go to state 22
    textit           go to state 23
    href             go to state 24
    par              go to state 25
    hrule            go to state 26
    includegraphics  go to state 27
    code_part        go to state 28
    enumerate        go to state 29
    itemize          go to state 30
    tabular          go to state 31
    paragraph        go to state 32
    sentence         go to state 33
    text             go to state 34


State 2

    0 $accept: start • $end

    $end  shift, and go to state 35


State 3

   18 section: SECTION • BRACT_L TEXT BRACT_R

    BRACT_L  shift, and go to state 36


State 4

   19 subsection: SUBSECTION • BRACT_L TEXT BRACT_R

    BRACT_L  shift, and go to state 37


State 5

   20 subsubsection: SUBSUBSEC • BRACT_L TEXT BRACT_R

    BRACT_L  shift, and go to state 38


State 6

   21 textbf: BOLD • BRACT_L TEXT BRACT_R

    BRACT_L  shift, and go to state 39


State 7

   22 textit: ITALIC • BRACT_L TEXT BRACT_R

    BRACT_L  shift, and go to state 40


State 8

   26 includegraphics: IMAGE • SQ_BL TEXT SQ_BR BRACT_L TEXT BRACT_R

    SQ_BL  shift, and go to state 41


State 9

   23 href: HYPERLINK • BRACT_L TEXT BRACT_R BRACT_L TEXT BRACT_R

    BRACT_L  shift, and go to state 42


State 10

   25 hrule: HLINE •

    $default  reduce using rule 25 (hrule)


State 11

   24 par: PARAGRAPH •

    $default  reduce using rule 24 (par)


State 12

   31 itemize: BEG_ITEMIZE • unord_item_list END_ITEMIZE

    ITEM  shift, and go to state 43

    unord_item_list  go to state 44


State 13

   27 code_part: BEG_CODE • sentence END_CODE

    TEXT  shift, and go to state 16

    sentence  go to state 45
    text      go to state 34


State 14

   34 tabular: BEG_TAB • BRACT_L columns BRACT_R actual_data END_TAB

    BRACT_L  shift, and go to state 46


State 15

   28 enumerate: BEG_ENUM • ord_item_list END_ENUM

    ITEM  shift, and go to state 47

    ord_item_list  go to state 48


State 16

   50 text: TEXT •

    $default  reduce using rule 50 (text)


State 17

    1 start: DOC multiple_call • END
    3 multiple_call: multiple_call • latex

    SECTION      shift, and go to state 3
    SUBSECTION   shift, and go to state 4
    SUBSUBSEC    shift, and go to state 5
    BOLD         shift, and go to state 6
    ITALIC       shift, and go to state 7
    IMAGE        shift, and go to state 8
    HYPERLINK    shift, and go to state 9
    HLINE        shift, and go to state 10
    PARAGRAPH    shift, and go to state 11
    BEG_ITEMIZE  shift, and go to state 12
    BEG_CODE     shift, and go to state 13
    BEG_TAB      shift, and go to state 14
    BEG_ENUM     shift, and go to state 15
    END          shift, and go to state 49
    TEXT         shift, and go to state 16

    latex            go to state 50
    section          go to state 19
    subsection       go to state 20
    subsubsection    go to state 21
    textbf           go to state 22
    textit           go to state 23
    href             go to state 24
    par              go to state 25
    hrule            go to state 26
    includegraphics  go to state 27
    code_part        go to state 28
    enumerate        go to state 29
    itemize          go to state 30
    tabular          go to state 31
    paragraph        go to state 32
    sentence         go to state 33
    text             go to state 34


State 18

    2 multiple_call: latex •

    $default  reduce using rule 2 (multiple_call)


State 19

    4 latex: section •

    $default  reduce using rule 4 (latex)


State 20

    5 latex: subsection •

    $default  reduce using rule 5 (latex)


State 21

    6 latex: subsubsection •

    $default  reduce using rule 6 (latex)


State 22

    7 latex: textbf •

    $default  reduce using rule 7 (latex)


State 23

    8 latex: textit •

    $default  reduce using rule 8 (latex)


State 24

   12 latex: href •

    $default  reduce using rule 12 (latex)


State 25

   10 latex: par •

    $default  reduce using rule 10 (latex)


State 26

    9 latex: hrule •

    $default  reduce using rule 9 (latex)


State 27

   11 latex: includegraphics •

    $default  reduce using rule 11 (latex)


State 28

   15 latex: code_part •

    $default  reduce using rule 15 (latex)


State 29

   13 latex: enumerate •

    $default  reduce using rule 13 (latex)


State 30

   14 latex: itemize •

    $default  reduce using rule 14 (latex)


State 31

   17 latex: tabular •

    $default  reduce using rule 17 (latex)


State 32

   16 latex: paragraph •

    $default  reduce using rule 16 (latex)


State 33

   47 paragraph: sentence •
   49 sentence: sentence • text

    TEXT  shift, and go to state 16

    TEXT      [reduce using rule 47 (paragraph)]
    $default  reduce using rule 47 (paragraph)

    text  go to state 51


State 34

   48 sentence: text •

    $default  reduce using rule 48 (sentence)


State 35

    0 $accept: start $end •

    $default  accept


State 36

   18 section: SECTION BRACT_L • TEXT BRACT_R

    TEXT  shift, and go to state 52


State 37

   19 subsection: SUBSECTION BRACT_L • TEXT BRACT_R

    TEXT  shift, and go to state 53


State 38

   20 subsubsection: SUBSUBSEC BRACT_L • TEXT BRACT_R

    TEXT  shift, and go to state 54


State 39

   21 textbf: BOLD BRACT_L • TEXT BRACT_R

    TEXT  shift, and go to state 55


State 40

   22 textit: ITALIC BRACT_L • TEXT BRACT_R

    TEXT  shift, and go to state 56


State 41

   26 includegraphics: IMAGE SQ_BL • TEXT SQ_BR BRACT_L TEXT BRACT_R

    TEXT  shift, and go to state 57


State 42

   23 href: HYPERLINK BRACT_L • TEXT BRACT_R BRACT_L TEXT BRACT_R

    TEXT  shift, and go to state 58


State 43

   32 unord_item_list: ITEM • TEXT

    TEXT  shift, and go to state 59


State 44

   31 itemize: BEG_ITEMIZE unord_item_list • END_ITEMIZE
   33 unord_item_list: unord_item_list • ITEM TEXT

    ITEM         shift, and go to state 60
    END_ITEMIZE  shift, and go to state 61


State 45

   27 code_part: BEG_CODE sentence • END_CODE
   49 sentence: sentence • text

    END_CODE  shift, and go to state 62
    TEXT      shift, and go to state 16

    text  go to state 51


State 46

   34 tabular: BEG_TAB BRACT_L • columns BRACT_R actual_data END_TAB

    TEXT  shift, and go to state 63

    columns  go to state 64


State 47

   29 ord_item_list: ITEM • TEXT

    TEXT  shift, and go to state 65


State 48

   28 enumerate: BEG_ENUM ord_item_list • END_ENUM
   30 ord_item_list: ord_item_list • ITEM TEXT

    ITEM      shift, and go to state 66
    END_ENUM  shift, and go to state 67


State 49

    1 start: DOC multiple_call END •

    $default  reduce using rule 1 (start)


State 50

    3 multiple_call: multiple_call latex •

    $default  reduce using rule 3 (multiple_call)


State 51

   49 sentence: sentence text •

    $default  reduce using rule 49 (sentence)


State 52

   18 section: SECTION BRACT_L TEXT • BRACT_R

    BRACT_R  shift, and go to state 68


State 53

   19 subsection: SUBSECTION BRACT_L TEXT • BRACT_R

    BRACT_R  shift, and go to state 69


State 54

   20 subsubsection: SUBSUBSEC BRACT_L TEXT • BRACT_R

    BRACT_R  shift, and go to state 70


State 55

   21 textbf: BOLD BRACT_L TEXT • BRACT_R

    BRACT_R  shift, and go to state 71


State 56

   22 textit: ITALIC BRACT_L TEXT • BRACT_R

    BRACT_R  shift, and go to state 72


State 57

   26 includegraphics: IMAGE SQ_BL TEXT • SQ_BR BRACT_L TEXT BRACT_R

    SQ_BR  shift, and go to state 73


State 58

   23 href: HYPERLINK BRACT_L TEXT • BRACT_R BRACT_L TEXT BRACT_R

    BRACT_R  shift, and go to state 74


State 59

   32 unord_item_list: ITEM TEXT •

    $default  reduce using rule 32 (unord_item_list)


State 60

   33 unord_item_list: unord_item_list ITEM • TEXT

    TEXT  shift, and go to state 75


State 61

   31 itemize: BEG_ITEMIZE unord_item_list END_ITEMIZE •

    $default  reduce using rule 31 (itemize)


State 62

   27 code_part: BEG_CODE sentence END_CODE •

    $default  reduce using rule 27 (code_part)


State 63

   35 columns: TEXT •

    $default  reduce using rule 35 (columns)


State 64

   34 tabular: BEG_TAB BRACT_L columns • BRACT_R actual_data END_TAB
   36 columns: columns • TEXT

    BRACT_R  shift, and go to state 76
    TEXT     shift, and go to state 77


State 65

   29 ord_item_list: ITEM TEXT •

    $default  reduce using rule 29 (ord_item_list)


State 66

   30 ord_item_list: ord_item_list ITEM • TEXT

    TEXT  shift, and go to state 78


State 67

   28 enumerate: BEG_ENUM ord_item_list END_ENUM •

    $default  reduce using rule 28 (enumerate)


State 68

   18 section: SECTION BRACT_L TEXT BRACT_R •

    $default  reduce using rule 18 (section)


State 69

   19 subsection: SUBSECTION BRACT_L TEXT BRACT_R •

    $default  reduce using rule 19 (subsection)


State 70

   20 subsubsection: SUBSUBSEC BRACT_L TEXT BRACT_R •

    $default  reduce using rule 20 (subsubsection)


State 71

   21 textbf: BOLD BRACT_L TEXT BRACT_R •

    $default  reduce using rule 21 (textbf)


State 72

   22 textit: ITALIC BRACT_L TEXT BRACT_R •

    $default  reduce using rule 22 (textit)


State 73

   26 includegraphics: IMAGE SQ_BL TEXT SQ_BR • BRACT_L TEXT BRACT_R

    BRACT_L  shift, and go to state 79


State 74

   23 href: HYPERLINK BRACT_L TEXT BRACT_R • BRACT_L TEXT BRACT_R

    BRACT_L  shift, and go to state 80


State 75

   33 unord_item_list: unord_item_list ITEM TEXT •

    $default  reduce using rule 33 (unord_item_list)


State 76

   34 tabular: BEG_TAB BRACT_L columns BRACT_R • actual_data END_TAB

    HL    shift, and go to state 81
    TEXT  shift, and go to state 16

    actual_data  go to state 82
    row_area     go to state 83
    row          go to state 84
    sentn        go to state 85
    text         go to state 86


State 77

   36 columns: columns TEXT •

    $default  reduce using rule 36 (columns)


State 78

   30 ord_item_list: ord_item_list ITEM TEXT •

    $default  reduce using rule 30 (ord_item_list)


State 79

   26 includegraphics: IMAGE SQ_BL TEXT SQ_BR BRACT_L • TEXT BRACT_R

    TEXT  shift, and go to state 87


State 80

   23 href: HYPERLINK BRACT_L TEXT BRACT_R BRACT_L • TEXT BRACT_R

    TEXT  shift, and go to state 88


State 81

   37 actual_data: HL • row_area HL

    TEXT  shift, and go to state 16

    row_area  go to state 89
    row       go to state 84
    sentn     go to state 85
    text      go to state 86


State 82

   34 tabular: BEG_TAB BRACT_L columns BRACT_R actual_data • END_TAB

    END_TAB  shift, and go to state 90


State 83

   38 actual_data: row_area •
   40 row_area: row_area • HL row ROW_END
   41         | row_area • row ROW_END

    HL    shift, and go to state 91
    TEXT  shift, and go to state 16

    $default  reduce using rule 38 (actual_data)

    row    go to state 92
    sentn  go to state 85
    text   go to state 86


State 84

   39 row_area: row • ROW_END
   43 row: row • TAB_CELL_SEP sentn

    TAB_CELL_SEP  shift, and go to state 93
    ROW_END       shift, and go to state 94


State 85

   42 row: sentn •
   45 sentn: sentn • TAB_CELL_SEP text
   46      | sentn • text

    TAB_CELL_SEP  shift, and go to state 95
    TEXT          shift, and go to state 16

    TAB_CELL_SEP  [reduce using rule 42 (row)]
    $default      reduce using rule 42 (row)

    text  go to state 96


State 86

   44 sentn: text •

    $default  reduce using rule 44 (sentn)


State 87

   26 includegraphics: IMAGE SQ_BL TEXT SQ_BR BRACT_L TEXT • BRACT_R

    BRACT_R  shift, and go to state 97


State 88

   23 href: HYPERLINK BRACT_L TEXT BRACT_R BRACT_L TEXT • BRACT_R

    BRACT_R  shift, and go to state 98


State 89

   37 actual_data: HL row_area • HL
   40 row_area: row_area • HL row ROW_END
   41         | row_area • row ROW_END

    HL    shift, and go to state 99
    TEXT  shift, and go to state 16

    row    go to state 92
    sentn  go to state 85
    text   go to state 86


State 90

   34 tabular: BEG_TAB BRACT_L columns BRACT_R actual_data END_TAB •

    $default  reduce using rule 34 (tabular)


State 91

   40 row_area: row_area HL • row ROW_END

    TEXT  shift, and go to state 16

    row    go to state 100
    sentn  go to state 85
    text   go to state 86


State 92

   41 row_area: row_area row • ROW_END
   43 row: row • TAB_CELL_SEP sentn

    TAB_CELL_SEP  shift, and go to state 93
    ROW_END       shift, and go to state 101


State 93

   43 row: row TAB_CELL_SEP • sentn

    TEXT  shift, and go to state 16

    sentn  go to state 102
    text   go to state 86


State 94

   39 row_area: row ROW_END •

    $default  reduce using rule 39 (row_area)


State 95

   45 sentn: sentn TAB_CELL_SEP • text

    TEXT  shift, and go to state 16

    text  go to state 103


State 96

   46 sentn: sentn text •

    $default  reduce using rule 46 (sentn)


State 97

   26 includegraphics: IMAGE SQ_BL TEXT SQ_BR BRACT_L TEXT BRACT_R •

    $default  reduce using rule 26 (includegraphics)


State 98

   23 href: HYPERLINK BRACT_L TEXT BRACT_R BRACT_L TEXT BRACT_R •

    $default  reduce using rule 23 (href)


State 99

   37 actual_data: HL row_area HL •
   40 row_area: row_area HL • row ROW_END

    TEXT  shift, and go to state 16

    $default  reduce using rule 37 (actual_data)

    row    go to state 100
    sentn  go to state 85
    text   go to state 86


State 100

   40 row_area: row_area HL row • ROW_END
   43 row: row • TAB_CELL_SEP sentn

    TAB_CELL_SEP  shift, and go to state 93
    ROW_END       shift, and go to state 104


State 101

   41 row_area: row_area row ROW_END •

    $default  reduce using rule 41 (row_area)


State 102

   43 row: row TAB_CELL_SEP sentn •
   45 sentn: sentn • TAB_CELL_SEP text
   46      | sentn • text

    TAB_CELL_SEP  shift, and go to state 95
    TEXT          shift, and go to state 16

    TAB_CELL_SEP  [reduce using rule 43 (row)]
    $default      reduce using rule 43 (row)

    text  go to state 96


State 103

   45 sentn: sentn TAB_CELL_SEP text •

    $default  reduce using rule 45 (sentn)


State 104

   40 row_area: row_area HL row ROW_END •

    $default  reduce using rule 40 (row_area)
